--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
 <html lang="en-ca">
 <head>
   <meta charset="utf-8">
-  <title></title>
+  <title>Responsive navigtion</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link href="css/main.css" rel="stylesheet">
 </head>
 <body>
+  <header>
+    <h1>Quetzalcoatlus</h1>
+    <nav>
+      <li><a href="#">Environment</a></li>
+      <li><a href="#">Dimensions</a></li>
+      <li><a href="#">Diet</a></li>
+      <li><a href="#">Flight</a></li>
+    </nav>
+  </header>
 
 </body>
 </html>
